--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -25,3 +25,36 @@
   transform: translateY(-10px);
   box-shadow: 0 12px 24px rgba(27,32,59,0.2);
 }
+
+.img-patas {
+  width: 100%;   /* ocupa toda largura do card */
+  height: auto;  /* mantém proporção */
+  border-radius: 15px; /* opcional, arredonda cantos */
+}
+
+/* se quiser forçar um tamanho fixo */
+.img-patas.grande {
+  width: 500px;
+  height: 300px;
+  object-fit: cover; /* preenche sem distorcer */
+}
+
+.patinhas-section {
+  background-image: url('/public/img/cat-paws-2674056.png'); /* caminho da sua imagem */
+  background-size: cover;   /* cobre toda a área */
+/* não repete */
+  background-position: center;  /* centraliza */
+  padding: 100px 0; /* espaço interno p/ não colar o conteúdo na borda */
+}
+
+.text-card {
+  background: rgba(255, 255, 255, 0.8); /* branco com 80% de opacidade */
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.2); /* sombra suave */
+  display: inline-block; /* só envolve o texto */
+}
+
+html {
+  scroll-behavior: smooth;
+}
